--- a/host/package.json
+++ b/host/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "host",
+  "name": "host_app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -26,5 +26,8 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
+  },
+  "zephyr:dependencies": {
+    "remote_app": "0.0.1"
   }
 }
